--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://muthuramanmr.github.io/pizza",
+  "homepage": "https://muthuramanmr.github.io/Restaurant",
   "name": "app1",
   "version": "0.1.0",
   "private": true,
@@ -48,3 +48,5 @@
     "gh-pages": "^6.0.0"
   }
 }
+
+
